--- a/package.json
+++ b/package.json
@@ -9,22 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "--legacy-peer-deps": "^0.0.1-security.6",
+    "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
+    "expo-clipboard": "~4.1.2",
     "expo-font": "~11.1.1",
+    "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^2.3.0",
+    "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-tab-view": "^3.5.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-pager-view": "6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
