--- a/package.json
+++ b/package.json
@@ -6,41 +6,67 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|expo-notifications|@rneui/themed|firebase/auth|@react-native-firebase/app|@react-native-firebase/auth|@react-native-picker/picker|@react-navigation/material-bottom-tabs|@react-navigation/material-top-tabs|@rneui/base|firebase)"
+    ]
   },
   "dependencies": {
     "--legacy-peer-deps": "^0.0.1-security.6",
+    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-firebase/app": "^18.1.0",
+    "@react-native-firebase/auth": "^18.1.0",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.15",
+    "expo-calendar": "^11.1.1",
     "expo-clipboard": "~4.1.2",
+    "expo-device": "^5.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "^14.1.1",
+    "expo-linear-gradient": "^12.1.2",
+    "expo-notifications": "^0.18.1",
     "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.2",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
+    "react-native-document-picker": "^9.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-gifted-chat": "^2.3.0",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-stopwatch-timer": "^0.0.21",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-pager-view": "6.1.2"
+    "react-test-renderer": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.1.2"
   },
   "private": true
 }
